REGRESSION(r210845) Build broken with ENABLE_MHTML disabled https://bugs.webkit.org/show_bug.cgi?id=167771

Reviewed by Daniel Bates.

* loader/DocumentLoader.cpp:
(WebCore::DocumentLoader::commitData):


Canonical link: https://commits.webkit.org/185264@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@212227 268f45cc-cd09-0410-ab3c-d52691b4dbfc